--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <!--Vendor libraries-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
 
@@ -25,6 +25,7 @@
 
 <!--HB template definitions. -->
 <script id="flight-search-template" type="text/x-handlebars-template">
+    <h2>{{title}}</h2>
     <form class="form" name="search">
         <div class="container">
             <div class="row">
@@ -61,13 +62,12 @@
 
             <div class="row">
                 <div class="col col-sm-12">
-                    <button type="button" name="search">Search</button>
+                    <input type="submit" name="search" value="Search"/>
                 </div>
             </div>
         </div>
     </form>
-
-    <p>You can find me in {{city}}. My address is {{number}} {{street}}.</p>
+    <!--<p>You can find me in {{city}}. My address is {{number}} {{street}}.</p>-->
 </script>
 </body>
 </html>
