--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!--Javascript logic-->
 <script src="src/util.js" type="text/javascript"></script>
-<script src="src/templates/flight-search-template.js" type="text/javascript"></script>
+<script src="src/init.js" type="text/javascript"></script>
 
 <!--HB template definitions. -->
 <script id="flight-search-template" type="text/x-handlebars-template">
