--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                            placeholder="From location (eg: Sydney)"
                            name="from"
                            id="fromLoc"
+                           value="{{from}}"
                            required
                     >
                 </div>
@@ -44,6 +45,7 @@
                     <input type="text"
                            placeholder="To location (eg: San Jose)"
                            name="toLoc"
+                           value="{{to}}"
                            id="toLoc"
                            required
                     >
@@ -55,7 +57,7 @@
                            placeholder="Enter date"
                            name="travelDate"
                            id="travelDate"
-                           value={{date}}
+                           value={{when}}
                            required
                     >
                 </div>
