--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <!--HB template definitions. -->
 <script id="flight-search-template" type="text/x-handlebars-template">
-    <h2>{{title}}</h2>
-    <form class="form" name="search" action="#">
-        <div class="container">
+    <div class="container container-fluid">
+        <h2>{{title}}</h2>
+        <form class="form" name="search" action="#">
             <div class="row">
                 <div class="col col-sm-4 form-group">
                     <label for="fromLoc">From location</label>
@@ -76,9 +76,9 @@
                 <thead class="thead-default">
                 <th>Airline</th>
                 <th>flightNum</th>
-                <th>start</th>
+                <th>Departure</th>
                 <th>Airport</th>
-                <th>finish</th>
+                <th>Arrival</th>
                 <th>Airport</th>
                 <th>price&nbsp;($)</th>
                 </thead>
@@ -96,8 +96,8 @@
                 {{/search_results}}
                 </tbody>
             </table>
-        </div>
-    </form>
+        </form>
+    </div>
 </script>
 </body>
 </html>
