--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <script id="flight-search-template" type="text/x-handlebars-template">
     <div class="container container-fluid">
         <h2>{{title}}</h2>
-        <form class="form" name="search" action="#">
+        <form class="form" name="search" action="#" {{{formStyle}}}>
             <div class="row">
                 <div class="col col-sm-4 form-group">
                     <label for="fromLoc">From location</label>
@@ -35,6 +35,7 @@
                            class="form-control"
                            placeholder="From location (eg: Sydney)"
                            name="from"
+                           {{{disabled}}}
                            id="fromLoc"
                            value="{{from}}"
                            required
@@ -48,6 +49,7 @@
                            placeholder="To location (eg: San Jose)"
                            name="toLoc"
                            value="{{to}}"
+                           {{{disabled}}}
                            id="toLoc"
                            required
                     >
@@ -60,6 +62,7 @@
                            placeholder="Enter date"
                            name="travelDate"
                            id="travelDate"
+                           {{{disabled}}}
                            value={{when}}
                            required
                     >
@@ -68,7 +71,12 @@
 
             <div class="row">
                 <div class="col col-sm-12">
-                    <input type="submit" name="search" value="Search" class="btn btn-primary"/>
+                    <input type="submit"
+                           name="search"
+                           value="Search"
+                           class="btn btn-primary"
+                           {{{disabled}}}
+                    />
                 </div>
             </div>
 
